@@ -5,6 +5,8 @@ Version 2.6.3
 ~~~~~~~~~~~~~
 
 * Fixing #71 #26 encoding issues in video files (thanks to -L0Lock-)
+* Fixing tempfile issue with recursion on cleanup
+* Fixing SVT AV1 command building raising errors on bad crop
 
 Version 2.6.2
 ~~~~~~~~~~~~~
